# aeromap

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_SPEC.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/benchmark/: aeromap_3d_bridge.yaml  aeromap_cost_aware_airfrans_v05.yaml  aeromap_cost_aware_drivaerml_v05.yaml  aeromap_mission_control.yaml  aeromap_mission_control_v03.yaml  drivaerml_mvp.yaml
configs/cfd/: venturi_core_canonical_coarse.yaml  venturi_core_canonical_fine.yaml  venturi_core_canonical_medium.yaml
configs/model/: corrector_core_smoke.yaml
containers/: cfd.Dockerfile
docs/demo/: aeromap_mission_control.html
docs/reports/: aerocliff_core_live_acquisition_loop.md  aeromap_3d_practicability_bridge.md  aeromap_aerocliff_core_mvp_v0_1.md  aeromap_cost_aware_v0_5_report.md  aeromap_venturi_core_mvp_v0_1.md  airfrans_surface_pressure_field_baseline_v0_1.md  nasa_hump_cfd_methodology_preflight_v0_1.md  nasa_hump_cp_cf_extraction_v0_1.md  nasa_hump_medium_grid_sst_v0_1.md  nasa_hump_methodology_finding_v0_1.md  nasa_hump_sst_smoke_v0_1.md  venturi_core_live_acquisition_loop.md
scripts/: __init__.py  convert_tmr_nasa_hump_to_openfoam.py  extract_nasa_hump_cp_cf.py  generate_aeromap_portfolio_figures.py  generate_aeromap_release_figures.py  prepare_nasa_hump_methodology.py  report_nasa_hump_medium_grid_sst.py  report_nasa_hump_sst_smoke.py  run_nasa_hump_medium_grid_sst.py  run_nasa_hump_sst_smoke.py  run_venturi_core_2d_response_map_replay.py
src/aeromap/: __init__.py  attempts.py  cli.py  constants.py  io.py  parameters.py  transforms.py
tests/: __init__.py
tests/integration/: test_drivaerml_real_assets.py  (+1 more)
(+122 files in other folders)
